examples/good/20_1_EXTRA_default_parameters.soy
def sum(a = 1, b = 1, c = 1, d = 1) -> int {
    return a + b + c + d;
}

print(sum());

print(sum(1));

print(sum(1, 2));

print(sum(1, 2, 3));

print(sum(1, 2, 3, 4));

print("20_1_PASSED");