examples/bad/none_operations.soy
a = int;
b = int;

print(b); # None

ref a; # ERROR - ref allowed only in deftion arguments

a == b; # ERROR - arithmetic and comparison is not allowed on None
a + b; # ERROR

b = 10;
a == b; # ERROR - arithmetic and comparison is not allowed on None

a == None; # ERROR

c = None; # ERROR - undefined type of c
c = int;
c = None; # OK

def (a = None) -> int { # ERROR - undefined type of a
    return a;
}

d = int;
d = None;
d = "cześć"; # ERROR - d is still an int